<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupChatActivity">

    <include
        android:id="@+id/group_chat_bar_layout"
        layout="@layout/app_bar_layout" >
    </include>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_group_chat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="1dp"
        app:layout_constraintBottom_toTopOf="@+id/group_chat_scroll_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_chat_bar_layout"
        app:layout_constraintRight_toLeftOf="@id/search"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/search_chat" />


    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Search"
        app:layout_constraintLeft_toRightOf="@id/search_group_chat"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_chat_bar_layout"
        app:layout_constraintBottom_toTopOf="@id/group_chat_scroll_view"
        android:layout_marginRight="8dp"
        />

    <ScrollView
        android:id="@+id/group_chat_scroll_view"
        android:layout_width="410dp"
        android:layout_height="615dp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_2"
        app:layout_constraintTop_toBottomOf="@id/search_group_chat"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/group_conversation_list_users"
                android:layout_width="407dp"
                android:layout_height="610dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <EditText
            android:id="@+id/input_group_message"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:hint="@string/write_your_message"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="@id/linear_layout_2"
            app:layout_constraintLeft_toLeftOf="@id/linear_layout_2"
            app:layout_constraintRight_toLeftOf="@id/group_chat_send_button"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_2"
            android:autofillHints="" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/send"
            android:id="@+id/group_chat_send_button"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_2"
            app:layout_constraintBottom_toBottomOf="@id/linear_layout_2"
            app:layout_constraintLeft_toRightOf="@id/input_group_message"
            app:layout_constraintRight_toRightOf="@id/linear_layout_2"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>