<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountSettingsActivity"
    app:layout_constraintVertical_chainStyle="packed">

    <include layout="@layout/app_bar_layout"
        android:id="@+id/settings_toolbar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scroll_view_constraint"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toTopOf="@id/settings_user_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/scroll_view_constraint"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/college"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="College: "
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/settings_user_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/college_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/college_name"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:gravity="center"
                android:padding="16dp"
                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toTopOf="@id/settings_user_name"
                app:layout_constraintLeft_toRightOf="@id/college"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                android:layout_marginBottom="20dp"/>
            <EditText
                android:id="@+id/settings_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/settings_user_bio"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/settings_user_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:gravity="center_horizontal"
                android:hint="@string/bio"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_user_name"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/settings_update_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/primary_buttons"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/update"
                android:textColor="@color/primary_buttons_text"
                app:layout_constraintBottom_toBottomOf="@id/scroll_view_constraint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_user_bio"
                app:layout_constraintVertical_bias="0.137" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>